# Autonomous-Electrified-Vehicle

./: .gitignore  README.md
Final Project/catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py
Final Project/catkin_ws/devel/include/vesc_msgs/: VescStateStamped.h
Final Project/catkin_ws/devel/lib/f1tenth_simulator/: behavior_controller  experiment  keyboard  mux  random_walk  simulator
Final Project/catkin_ws/devel/lib/imu_bno055/: bno055_i2c_node
Final Project/catkin_ws/devel/lib/imu_tf_pkg/: imu_tf_pub
Final Project/catkin_ws/devel/lib/joy/: joy_node
Final Project/catkin_ws/devel/lib/laser_ortho_projector/: laser_ortho_projector_node
Final Project/catkin_ws/devel/lib/laser_scan_matcher/: laser_scan_matcher_node
Final Project/catkin_ws/devel/lib/laser_scan_sparsifier/: laser_scan_sparsifier_node
Final Project/catkin_ws/devel/lib/laser_scan_splitter/: laser_scan_splitter_node
Final Project/catkin_ws/devel/lib/ncd_parser/: ncd_parser
Final Project/catkin_ws/devel/lib/pkgconfig/: f1tenth_simulator.pc  imu_bno055.pc  imu_tf_pkg.pc  joy.pc  laser_ortho_projector.pc  laser_scan_matcher.pc  laser_scan_sparsifier.pc  laser_scan_splitter.pc  ncd_parser.pc  polar_scan_matcher.pc  scan_to_cloud_converter.pc  spacenav_node.pc  test.pc  (+3 more)
Final Project/catkin_ws/src/f1tenth_simulator/: package.xml  params.yaml
Final Project/catkin_ws/src/imu_tf_pkg/: CMakeLists.txt  package.xml
Final Project/catkin_ws/src/imu_tf_pkg/launch/: imu_tf_pub.launch
Final Project/catkin_ws/src/imu_tf_pkg/src/: imu_tf_pub.cpp
Final Project/catkin_ws/src/test/: CMakeLists.txt
(+91 files in other folders)
